objects/CI_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>This relationship is with CI Feedback object to capture Feedback provided by Partner for CI information being shared with Partner.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CI Feedbacks</relationshipLabel>
        <relationshipName>CI_Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Feedback will be send to email entered in this field.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Feedback_Comments__c</fullName>
        <description>this field captures the Feedback Comments provided by the Partner user</description>
        <label>Feedback Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Leads related to CI Feedback provided by Partner</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>CI Feedbacks</relationshipLabel>
        <relationshipName>CI_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner User who submitted the Feedback.</description>
        <label>Partner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CI_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TP related to CI Feedback provided by Partner User</description>
        <label>Target Prospect</label>
        <referenceTo>Assigned_Partner__c</referenceTo>
        <relationshipLabel>CI Feedbacks</relationshipLabel>
        <relationshipName>CI_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>this object is to capture feedback for CI information being shared with Partner.</description>
    <label>CI Feedback</label>
    <nameField>
        <displayFormat>A{000}</displayFormat>
        <label>CI Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>